--- a/growise/backend/vercel.json
+++ b/growise/backend/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
   ],
@@ -12,11 +12,11 @@
     },
     {
       "src": "/api/(.*)",
-      "dest": "index.js"
+      "dest": "server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "index.js",
+      "dest": "server.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
         "Access-Control-Allow-Origin": "*",
